welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (nums(0)==9 || nums(1) ==9 || nums(2)==9) {
    ^arrayFront9:7: error: type mismatch;
 found   : Unit
 required: Boolean
    for ( i<- 0 to 3) {
           ^